--- a/Sray/2_portfolio.ipynb
+++ b/Sray/2_portfolio.ipynb
@@ -2,7 +2,7 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 390,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -19,7 +19,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 391,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
@@ -250,7 +250,7 @@
                             "1        83.594223  18.561064  25.279371  "
                         ]
                     },
-                    "execution_count": 391,
+                    "execution_count": 2,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -274,7 +274,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 392,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -296,7 +296,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 393,
+            "execution_count": 4,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -308,7 +308,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 394,
+            "execution_count": 5,
             "metadata": {},
             "outputs": [
                 {
@@ -541,7 +541,7 @@
                             "[5 rows x 24 columns]"
                         ]
                     },
-                    "execution_count": 394,
+                    "execution_count": 5,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -567,7 +567,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 395,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [
                 {
@@ -600,7 +600,7 @@
                             "dtype: object"
                         ]
                     },
-                    "execution_count": 395,
+                    "execution_count": 6,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -612,7 +612,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 396,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [
                 {
@@ -628,7 +628,7 @@
                             "12"
                         ]
                     },
-                    "execution_count": 396,
+                    "execution_count": 7,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -642,7 +642,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 397,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -667,7 +667,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 398,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -700,7 +700,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 399,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -758,7 +758,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 400,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [
                 {
@@ -1173,7 +1173,7 @@
                             "[5880 rows x 26 columns]"
                         ]
                     },
-                    "execution_count": 400,
+                    "execution_count": 11,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -1182,6 +1182,15 @@
                 "#combine all the data \n",
                 "new_companies_data = pd.concat(companies_sec)\n",
                 "new_companies_data"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 12,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "new_companies_data.to_excel(\"sg_checking.xlsx\")"
             ]
         },
         {
